--- a/index.html
+++ b/index.html
@@ -3,34 +3,38 @@
   <head>
     <title>Title</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <style type="text/css">
-      /* Slideshow styles */
-    </style>
+	<link rel='stylesheet' href="css/main.css" media="screen" />
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <textarea id="source">
-
-class: center, middle
-
-# Title
-
----
-
-# Agenda
-
-1. Introduction
-2. Deep-dive
-3. ...
-
----
-
-# Introduction
-
-    </textarea>
-    <script src="http://gnab.github.io/remark/downloads/remark-0.6.0.min.js" type="text/javascript">
-    </script>
-    <script type="text/javascript">
-      var slideshow = remark.create();
-    </script>
+  <div class='content'>
+	<div class='name'>
+		<div class='profile'>
+			
+		</div>
+		<span> Joost Naaijen - KLMZ </span>
+		<br class='clr' />
+	</div>
+	<div class='badges'>
+		<a href='http://www.github.com/kaalaamaazoo'>
+			<div class='github'>
+			<span> Github </span>	
+			</div>
+			
+		</a>
+		<a href='http://www.twitter.com/kaalaamaazoo'>
+			<div class='twitter'>
+				<span> Twitter </span>
+			</div>
+			
+		</a>
+		<a href='http://kaalaamaazoo.github.io/resume.html'>
+			<div class='resume greyed'>
+				<span> Soon.. </span>
+			</div>
+			
+		</a>
+	</div>	
+	</div>
   </body>
 </html>
