--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Joost Naaijen - KLMZ</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<link rel='stylesheet' href="css/main.css" media="screen" />
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
