--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<link rel='stylesheet' href="css/main.css" media="screen" />
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+	<script type='text/javascript' src='http://code.jquery.com/jquery-2.1.0.min.js'></script>
+	<script type='text/javascript' src='js/main.js'></script>
   </head>
   <body>
   <div class='content'>
@@ -28,7 +30,7 @@
 			</div>
 			
 		</a>
-		<a href='http://kaalaamaazoo.github.io/resume.html'>
+		<a href='#'>
 			<div class='resume greyed'>
 				<span> Soon.. </span>
 			</div>
