--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<br class='clr' />
 	</div>
 	<div class='badges'>
-		<a href='http://www.github.com/kaalaamaazoo'>
+		<a href='http://www.github.com/klmz'>
 			<div class='github'>
 			<span> Github </span>	
 			</div>
 			
 		</a>
-		<a href='http://www.twitter.com/kaalaamaazoo'>
+		<a href='http://www.twitter.com/_klmz'>
 			<div class='twitter'>
 				<span> Twitter </span>
 			</div>
