--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class='content'>
 	<div class='name'>
 		<div class='profile'>
-			
+
 		</div>
 		<span> Joost Naaijen - KLMZ </span>
 		<br class='clr' />
@@ -20,23 +20,23 @@
 	<div class='badges'>
 		<a href='http://www.github.com/klmz'>
 			<div class='github'>
-			<span> Github </span>	
+			<span> Github </span>
 			</div>
-			
+
 		</a>
 		<a href='http://www.twitter.com/_klmz'>
 			<div class='twitter'>
 				<span> Twitter </span>
 			</div>
-			
+
 		</a>
-		<a href='#'>
-			<div class='resume greyed'>
-				<span> Soon.. </span>
+		<a href='https://www.linkedin.com/profile/view?id=333410180'>
+			<div class='linkedIn'>
+				<span> LinkedIn </span>
 			</div>
-			
+
 		</a>
-	</div>	
+	</div>
 	</div>
   </body>
 </html>
